tests/wordpress/fail/plugins/allwebmenus-wordpress-menu-plugin/allwebmenus-wordpress-menu.php
<?php
/*
Plugin Name: AllWebMenus WordPress Menu Plugin
Plugin URI: http://www.likno.com/addins/wordpress-menu.html
Description: WordPress plugin for the AllWebMenus PRO Javascript Menu Maker - Create stylish drop-down menus or sliding menus for your blogs!
Version: 1.1.3
Author: Likno Software
Author URI: http://www.likno.com/ 
*/
